--- a/src/orbital-designer/src/app/shared/components/side-bar/side-bar.component.scss
+++ b/src/orbital-designer/src/app/shared/components/side-bar/side-bar.component.scss
@@ -64,8 +64,9 @@
   }
 
   .side-bar-bottom {
-    min-width: 14vw;
-    margin-top: 1vh;
+    mat-icon {
+      margin: 0 1.25rem;
+    }
   }
 }
 
